--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.2"
+    "mongoose": "^5.9.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
